test/files/run/interpreter.check
This is an interpreter for Scala.
Type in expressions to have them evaluated.
Type :help for more information.

scala> 
scala> 
scala> unnamed0: scala.Int = 7

scala>      |      |      |      | gcd: (int,int)int

scala> five: int = 5

scala> x: scala.Int = 1

scala> x: scala.Int = 2

scala> three: scala.Int = 3

scala> defined type alias anotherint

scala> four: anotherint = 4

scala> <console>:5: error: type mismatch;
 found   : java.lang.String("hello")
 required: $iw.$iw.anotherint
val bogus: anotherint = "hello"
                        ^

scala> defined trait PointlessTrait

scala> 
scala> 
scala> defined class Foo

scala> defined class Bar

scala> foo2bar: (Foo)Bar

scala> bar: Bar = Bar(3)

scala> 
scala> 
scala> import bar._

scala> m: int = 3

scala> 
scala> 
scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> one: scala.Int = 1

scala> 
scala> 
scala> x1: scala.Int = 1

scala> x2: scala.Int = 1

scala> x3: scala.Int = 1

scala> x4: scala.Int = 1

scala> x5: scala.Int = 1

scala> x6: scala.Int = 1

scala> x7: scala.Int = 1

scala> x8: scala.Int = 1

scala> x9: scala.Int = 1

scala> x10: scala.Int = 1

scala> x11: scala.Int = 1

scala> x12: scala.Int = 1

scala> x13: scala.Int = 1

scala> x14: scala.Int = 1

scala> x15: scala.Int = 1

scala> x16: scala.Int = 1

scala> x17: scala.Int = 1

scala> x18: scala.Int = 1

scala> x19: scala.Int = 1

scala> x20: scala.Int = 1

scala> 
scala> two: scala.Int = 2

scala> 
scala> 